# ollama-vision-mcp

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
docs/: WINDOWS_INSTALL.md
examples/: claude_desktop_config.json  claude_desktop_config_with_venv.json  ericai_mcp_chat_config.json  usage_examples.py
src/: __init__.py  config.py  image_handler.py  ollama_client.py  server.py
tests/: __init__.py  test_server.py
